Fix rollczi hates